--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 Port=1000
 ADMIN_USER=Admin
-ADMIN_PASSWORD_HASH=$2a$12$NTA5rYOBjDG1.xujQCWp4u7VxvIkmZyea2TbIOEbo3MllS1Vpm8SK
+ADMIN_PASSWORD_HASH=$2a$12$mwrXZ9pmIUMXo7NscArPz..RchsU1zrus6ofw7K4j4B4DeMJngI72
